--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="re_password">Re-password</string>
     <string name="users">Users</string>
     <string name="ebooks">eBooks</string>
+    <string name="books">Books</string>
 </resources>
